--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@
       <p>Study algorithm design, efficiency, flowcharts, and pseudocode examples aligned with the Cambridge syllabus.</p>
       <a href="ch-23-algorithms.html" target="_blank">Open Notes →</a>
     </div>
+<div class="card">
+      <h3>Chapter 23 – Algorithms</h3>
+      <p>Programming in Java</p>
+      <a href="a2-java-prg-data-rep.html" target="_blank">Open Notes →</a>
+    </div>
+    <div class="card">
+      <h3>Chapter 23 – Algorithms</h3>
+      <p>Take a test in Java programming</p>
+      <a href="java-assessment.html" target="_blank">Open Notes →</a>
+    </div>
   </main>
 
   <footer>
@@ -192,3 +202,4 @@
 
 </body>
 </html>
+
