--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
       <p>Take a test in Java programming</p>
       <a href="java-assessment.html" target="_blank">Open Notes →</a>
     </div>
+    <div class="card">
+      <h3>Chapter 20. System Software</h3>
+      <p>System Software</p>
+      <a href="a2-system-software.html" target="_blank">Open Notes →</a>
+    </div>
   </main>
 
   <footer>
@@ -202,4 +207,5 @@
 
 </body>
 </html>
+
 
