Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -199,6 +199,13 @@
       <p>System Software</p>
       <a href="a2-system-software.html" target="_blank">Open Notes →</a>
     </div>
+ <div class="card">
+      <h3>Chapter 25. Programming Paradigm</h3>
+      <p>Programming Paradigm</p>
+      <a href="Chapter25_Programming_Paradigms_Ravi_Raju.html" target="_blank">Program Paradigm Notes →</a>
+    </div>
+
+   // https://github.com/PoojaRavi8902/A2-level/blob/main/Chapter25_Programming_Paradigms_Ravi_Raju.html
   </main>
 
   <footer>
@@ -207,5 +214,6 @@
 
 </body>
 </html>
+
 
 
