--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </header>
 
   <main class="container">
-    <!-- --- List of Linked Pages --- -->
+    <!-- --- Existing Pages --- -->
 
     <div class="card">
       <h3>Chapter 13 – Data Representation (Year 12)</h3>
@@ -173,6 +173,46 @@
       <a href="logicgates-booleanalgebra-assessment.html" target="_blank">Open Assessment →</a>
     </div>
 
+    <!-- --- Newly Added Pages --- -->
+
+    <div class="card">
+      <h3>Chapter 17 – Security</h3>
+      <p>Explore cybersecurity concepts, encryption, malware, and best practices for protecting digital systems.</p>
+      <a href="17-security.html" target="_blank">Open Notes →</a>
+    </div>
+
+    <div class="card">
+      <h3>Chapter 18 – Artificial Intelligence (AI)</h3>
+      <p>Learn about AI concepts, machine learning, neural networks, and applications in modern technology.</p>
+      <a href="18-Artificial-Intelligence.html" target="_blank">Open Notes →</a>
+    </div>
+
+    <div class="card">
+      <h3>Chapter 19 – Computational Thinking & Problem Solving</h3>
+      <p>Develop logical thinking, problem-solving strategies, algorithms, and computational methods for effective programming.</p>
+      <a href="19-computational-thinking.html" target="_blank">Open Notes →</a>
+    </div>
+
+    <div class="card">
+      <h3>A-Level Practical 1</h3>
+      <p>Interactive exercises and practical tasks to strengthen your Python and programming skills at the A-Level.</p>
+      <a href="A-level-practical1.html" target="_blank">Open Practical →</a>
+    </div>
+
+    <div class="card">
+      <h3>A-Level Practical 2</h3>
+      <p>Advanced A-Level programming tasks with Python, focusing on algorithms, data structures, and problem solving.</p>
+      <a href="A-level-practical2.html" target="_blank">Open Practical →</a>
+    </div>
+
+    <div class="card">
+      <h3>Chapter 20 – Further Programming</h3>
+      <p>Deep dive into Python programming, covering functions, file handling, OOP concepts, and project-based exercises.</p>
+      <a href="20-further-programming.html" target="_blank">Open Notes →</a>
+    </div>
+
+    <!-- --- Existing Pages Continued --- -->
+
     <div class="card">
       <h3>Chapter 20 – Software Development</h3>
       <p>Learn about software engineering principles, development life cycles, testing methods, and documentation standards.</p>
@@ -184,6 +224,7 @@
       <p>Study algorithm design, efficiency, flowcharts, and pseudocode examples aligned with the Cambridge syllabus.</p>
       <a href="ch-23-algorithms.html" target="_blank">Open Notes →</a>
     </div>
+
   </main>
 
   <footer>
