--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
       <p>Study algorithm design, efficiency, flowcharts, and pseudocode examples aligned with the Cambridge syllabus.</p>
       <a href="ch-23-algorithms.html" target="_blank">Open Notes →</a>
     </div>
+    <div class="card">
+      <h3>Chapter 15.1-Processor Fundamentals</h3>
+      <p>Study Processor Fundamental aligned with the Cambridge syllabus.</p>
+      <a href="15-1-processor-fundamentals.html" target="_blank">Open Notes →</a>
+    </div>
 
   </main>
 
@@ -233,3 +238,4 @@
 
 </body>
 </html>
+
