Update index.html with new chapters and resources

--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
       <a href="15-1-processor-fundamentals.html" target="_blank">Open Notes →</a>
     </div>
 
+
+    <div class="card">
+      <h3>Chapter 19-Logical Gates</h3>
+      <p>Study with the Cambridge syllabus.</p>
+      <a href="LogicGates.html" target="_blank">Open Notes →</a>
+    </div>
   </main>
 
   <footer>
@@ -238,4 +244,5 @@
 
 </body>
 </html>
+
 
