--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <div class="card">
       <h3>Chapter 19-Logical Gates</h3>
       <p>Study with the Cambridge syllabus.</p>
-      <a href="LogicGates.html" target="_blank">Open Notes →</a>
+      <a href="LogicalGates.html" target="_blank">Open Notes →</a>
     </div>
   </main>
 
@@ -244,5 +244,6 @@
 
 </body>
 </html>
+
 
 
