--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
       <h3>Chapter 19-Logical Gates</h3>
       <p>Study with the Cambridge syllabus.</p>
       <a href="LogicalGates.html" target="_blank">Open Notes →</a>
+      <a href="Boolean-Algebra2.html" target="_blank"> teaching notes -></a>
     </div>
   </main>
 
@@ -244,6 +245,7 @@
 
 </body>
 </html>
+
 
 
 
