--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
       <h3>A-Level Practical 2</h3>
       <p>Advanced A-Level programming tasks with Python, focusing on algorithms, data structures, and problem solving.</p>
       <a href="A-level-practical2.html" target="_blank">Open Practical →</a>
+      <a href="pythonArrays.html" target="_blank">Arrays Part1 →</a>
     </div>
 
     <div class="card">
@@ -245,6 +246,7 @@
 
 </body>
 </html>
+
 
 
 
