--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
       <h3>A-Level Practical 2</h3>
       <p>Advanced A-Level programming tasks with Python, focusing on algorithms, data structures, and problem solving.</p>
       <a href="A-level-practical2.html" target="_blank">Open Practical →</a>
+      </div>
+
+     <div class="card">
+      <h3>A-Level Practical 2</h3>
+      <p>Advanced A-Level programming tasks with Python, focusing on Arrays.</p>
       <a href="pythonArrays.html" target="_blank">Arrays Part1 →</a>
     </div>
 
@@ -246,6 +251,7 @@
 
 </body>
 </html>
+
 
 
 
