Fix HTML formatting and add new content

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </div>
 
      <div class="card">
-      <h3>A-Level Practical 2</h3>
+      <h3>A-Level Practical-Python Arrays-23/Nov/2025</h3>
       <p>Advanced A-Level programming tasks with Python, focusing on Arrays.</p>
       <a href="pythonArrays.html" target="_blank">Arrays Part1 →</a>
     </div>
@@ -251,6 +251,7 @@
 
 </body>
 </html>
+
 
 
 
