Refactor index.html with new content and structure

--- a/index.html
+++ b/index.html
@@ -243,6 +243,12 @@
       <a href="LogicalGates.html" target="_blank">Open Notes →</a>
       <a href="Boolean-Algebra2.html" target="_blank"> teaching notes -></a>
     </div>
+
+     <div class="card">
+      <h3>Data Files</h3>
+      <p>Study with the Cambridge syllabus.</p>
+      <a href="datafilesPython.html" target="_blank">Data Files →</a>
+      </div>
   </main>
 
   <footer>
@@ -251,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
