Update index.html with new content and styling

--- a/index.html
+++ b/index.html
@@ -249,6 +249,12 @@
       <p>Study with the Cambridge syllabus.</p>
       <a href="datafilesPython.html" target="_blank">Data Files →</a>
       </div>
+
+     <div class="card">
+      <h3>Queue Operations</h3>
+      <p>Study with the Cambridge syllabus.</p>
+      <a href="queue.html" target="_blank">Queue →</a>
+      </div>
   </main>
 
   <footer>
@@ -257,6 +263,7 @@
 
 </body>
 </html>
+
 
 
 
