Revise index.html with new resources and chapters
Updated the HTML structure and content of the index page, including new chapters and resources for computer science topics.

--- a/index.html
+++ b/index.html
@@ -250,6 +250,13 @@
       <a href="datafilesPython.html" target="_blank">Data Files →</a>
       </div>
 
+    <div class="card">
+      <h3>Arrays the Basics</h3>
+      <p>Study with the Cambridge syllabus.</p>
+      <a href="arraysnew.html" target="_blank">Array Basics →</a>
+      </div>
+
+
      <div class="card">
       <h3>Queue Operations</h3>
       <p>Study with the Cambridge syllabus.</p>
@@ -263,6 +270,7 @@
 
 </body>
 </html>
+
 
 
 
