Add new chapters and resources to index.html
Updated the index.html file to include new chapters and resources related to computer science, enhancing the educational content available for students.

--- a/index.html
+++ b/index.html
@@ -256,6 +256,13 @@
       <a href="arraysnew.html" target="_blank">Array Basics →</a>
       </div>
 
+    <div class="card">
+      <h3>Stacks in Python</h3>
+      <p>Study with the Cambridge syllabus.</p>
+      <a href="stack.html" target="_blank">Stack-LIFO →</a>
+      </div>
+
+
 
      <div class="card">
       <h3>Queue Operations</h3>
@@ -270,6 +277,7 @@
 
 </body>
 </html>
+
 
 
 
