Fix HTML formatting and add new content

--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
       <p>Study with the Cambridge syllabus.</p>
       <a href="queue.html" target="_blank">Queue →</a>
       </div>
+
+    <div class="card">
+      <h3>Class-OOPs</h3>
+      <p>Study with the Cambridge syllabus.</p>
+      <a href="oopdetailed.html" target="_blank">Class-Object →</a>
+</div>
+    
   </main>
 
   <footer>
@@ -277,6 +284,7 @@
 
 </body>
 </html>
+
 
 
 
