Update index.html with new chapters and resources

--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
       <p>Learn about software engineering principles, development life cycles, testing methods, and documentation standards.</p>
       <a href="software-development.html" target="_blank">Open Notes →</a>
     </div>
+        <div class="card">
+      <h3>Chapter 19 – Recursion</h3>
+      <p>All about Recursive function.</p>
+      <a href="Practical-Chapter19.html" target="_blank">Full details →</a>
+    </div>
 
     <div class="card">
       <h3>Chapter 23 – Algorithms</h3>
@@ -284,6 +289,7 @@
 
 </body>
 </html>
+
 
 
 
