Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             <li><a href="20-further-programming.html">Further Programming</a></li>
             <li><a href="ch-23-algorithms.html">Algorithms</a></li>
             <li><a href="Chapter25_Programming_Paradigms_Ravi_Raju.html">Programming Paradigms</a></li>
+            <li><a href="Chap19-Practical.html"> Practical Chapter 19</a>a></li>
         </ul>
     </section>
 
@@ -184,3 +185,4 @@
 
 </body>
 </html>
+
